# swissknife

./: .gitignore  NEW_README.md  README.md  main.py  pyproject.toml  solution.py  summarize_prompt.txt
samples/: 20584448-uhd_3840_2160_60fps_summary.txt  3pls.7z  Kanye_West_Ft_Pusha_T_-_Runaway_Offblogmedia.com_summary.txt  README.docx  index.txt
