[project]
name = "swissknife"
version = "0.1.0"
description = "A Swiss Army Knife for file conversions, manipulations and, Summarizations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=5.9.0",
    "patool>=4.0.1",
    "pdflatex>=0.1.3",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pypandoc-binary>=1.15",
    "imageio-ffmpeg>=0.6.0",
    "google-genai>=1.39.1",
]
